# MiniProject

./: .gitignore  LICENSE
AccountManagement/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  create.ui  createusr.cpp  createusr.h  main.cpp  mainwindow.ui
AccountManagement/AMCore/: AMModel.cpp  AMModel.h  CMakeLists.txt  QDatabaseManager.cpp  QDatabaseManager.h  QUser.cpp  QUser.h  QUserDAO.cpp  QUserDAO.h
AccountManagement/data/: user.db
AccountManagement/ui/: MainWindow.cpp  MainWindow.h  QCreateAccount.cpp  QCreateAccount.h  QHomeWidget.cpp  QHomeWidget.h  QLoginWidget.cpp  QLoginWidget.h  mainwindow.ui  qcreateaccount.ui  qhomewidget.ui  qloginwidget.ui
